赛事列表成绩录入update

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -22,7 +22,7 @@
 @dispalys: {
   block: block;
   inline: inline;
-  inline-block: inline-block;
+  inlineblock: inline-block;
   flex: flex;
   none: none;
   table: table;
