--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,6 +7,15 @@
   border-radius: 4px;
 }
 
+ul,
+ol {
+  list-style: none;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
 /* clearfix */
 .clearfix:after {
   content: "";
