--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,6 +7,37 @@
   border-radius: 4px;
 }
 
+
+.orangeButton {
+  border-color: orange !important;
+  background-color: orange !important;
+  color: #fff !important;
+
+  &:hover {
+    border-color: orange !important;
+    color: #fff !important;
+  }
+}
+
+.greenButton {
+  border-color: #52C41A !important;
+  background-color: #52C41A !important;
+  color: #fff !important;
+
+  &:hover {
+    border-color: #52C41A !important;
+    color: #fff !important;
+  }
+}
+
+.ant-table-tbody {
+  tr {
+    &:nth-child(2n) {
+      background-color: #fafafa !important;
+    }
+  }
+}
+
 ul,
 ol {
   list-style: none;
